--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "multer": "^1.4.5-lts.1",
     "node-dir": "^0.1.17",
     "open": "^7.3.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "request": "^2.88.2",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1"
@@ -35,6 +37,8 @@
     "@types/multer": "^1.4.9",
     "@types/node": "^14.18.11",
     "@types/node-dir": "0.0.33",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/request": "^2.48.5",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.6",
