--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "shafferography_server",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "description": "Add tags to google photos using Description field in metadata",
   "main": "index.js",
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.4",
@@ -51,6 +49,5 @@
     "start": "NODE_ENV=production node dist/server.js"
   },
   "author": "Ted",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
