--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.4",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "exiftool-vendored": "^13.2.0",
-    "express": "^4.17.1",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -27,6 +28,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "4.17.9",
+    "@types/express-session": "^1.18.0",
     "@types/fs-extra": "^9.0.4",
     "@types/lodash": "^4.14.165",
     "@types/luxon": "^1.26.0",
