--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "dotenv": "^8.6.0",
     "exiftool-vendored": "^13.2.0",
     "express": "^4.21.1",
@@ -13,7 +14,7 @@
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.19",
+    "mongoose": "^5.13.22",
     "multer": "^1.4.5-lts.1",
     "node-dir": "^0.1.17",
     "open": "^7.3.0",
@@ -33,7 +34,7 @@
     "@types/lodash": "^4.14.165",
     "@types/luxon": "^1.26.0",
     "@types/moment": "^2.13.0",
-    "@types/mongoose": "^5.10.1",
+    "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.9",
     "@types/node": "^14.18.11",
     "@types/node-dir": "0.0.33",
