--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^8.6.0",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.18.0",
