--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "fs-extra": "^9.0.1",
+    "heic-convert": "^2.1.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongoose": "^5.13.22",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.18.0",
     "@types/fs-extra": "^9.0.4",
+    "@types/heic-convert": "^2.1.0",
     "@types/lodash": "^4.14.165",
     "@types/luxon": "^1.26.0",
     "@types/moment": "^2.13.0",
